Fix the chart height issue on Firefox.
https://github.com/howtimeflies-io/ngx-highcharts/issues/1

--- a/example/src/styles.css
+++ b/example/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.chart-container {
+  height: 280px;
+}
+@media (min-width: 576px) {
+  .chart-container {
+    height: 400px;
+  }
+}
